# ROS

./: LICENSE  README.md
catkin_ws/devel/: .catkin  .rosinstall
catkin_ws/devel/lib/pkgconfig/: meca500_driver.pc
catkin_ws/devel/lib/python2.7/dist-packages/meca500_driver/: __init__.py
catkin_ws/devel/share/meca500_driver/cmake/: meca500_driverConfig.cmake
catkin_ws/src/meca500_driver/: CMakeLists.txt  package.xml
catkin_ws/src/meca500_driver/src/meca500_driver/: testNode.py
catkin_ws/src/mecademic_robot_node/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/mecademic_robot_node/src/mecademic_robot_driver/: mecademic_robot_driver.py  testNode.py
docs/: README.md
mecademic_controller/: CMakeLists.txt  package.xml
mecademic_controller/launch/: meca_controller.launch
mecademic_controller/src/: geomagic2meca500.py  geomagic2meca500kdl.py  geomagic2meca500kdlnode.py
mecademic_description/: CMakeLists.txt  package.xml
mecademic_description/launch/: meca_500_r3.launch
mecademic_description/urdf/: meca_500_r3.urdf.xacro  meca_500_r3.xacro  meca_500_r3_generated.urdf  meca_500_r3_macro.xacro
mecademic_robot_node/: CMakeLists.txt  package.xml
mecademic_robot_node/launch/: mecademic_robot_node.launch
mecademic_robot_node/src/mecademic_robot_driver/: mecademic_robot_driver.py  testNode.py  test_script.py  velocity_test.py
mecademic_robot_node/src/mecademic_robot_driver/MecademicRobot/: FirmwareUpdate.py  RobotController.py  RobotFeedback.py  __init__.py  test_mvp_movement.py  test_python_blending.py
mecademic_viz/: CMakeLists.txt  package.xml
mecademic_viz/launch/: view_meca_500_r3_model.launch  view_robot.launch
mecademic_viz/rviz/: robot.rviz
