<?xml version="1.0"?>
<package format="2">
  <name>mecademic_description</name>
  <version>0.0.0</version>
  <description>The mecademic_description package</description>

  <maintainer email="support@mecademic.com">Mecademic</maintainer>
  <author email="dniewinski@clearpathrobotics.com">Dave Niewinski</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
