<?xml version="1.0"?>
<package format="2">
  <name>mecademic_viz</name>
  <version>1.0.0</version>
  <description>The mecademic_viz package</description>

  <maintainer email="support@mecademic.com">Mecademic</maintainer>
  <author email="dniewinski@clearpathrobotics.com">Dave Niewinski</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>mecademic_description</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
  </export>
</package>
